--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<a href="http://google.com" target="_blank"> Go to google </a>
+<a href="http://google.com" target="_blank">Go to google</a>
+<p></p>
+<a href="http://www.naver.com" target="_blank">Go to naver</a>
